<resources>
    <string name="app_name">Github Today</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lukmanul Hakim - A2013F1357</string>
    <string name="nav_header_subtitle">MD-07 - &#169; Bangkit 2022</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_theme">Ganti Thema</string>
    <string name="menu_calendar">Atur Kalender</string>
    <string name="menu_covid">Cek-in Peduli Lindungi</string>
    <string name="menu_flight">Atur Penerbangan</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user_list">User List Application</string>
    <string name="user_list_activity">User List Activity</string>
    <string name="github_user_list">Github User List</string>
    <string name="detail_github_user">Detail Pengguna</string>
    <string name="github_user_list_title">Daftar Pengguna Github</string>
    <string name="intro_muka">"Github Today - List User Application Version 1.0 alphaBeta 2022.\nGithub Today - List User Application adalah aplikasi Github User yang kami kembangkan untuk memenuhi keinginan pengguna github di Indonesia yang mengharapkan adanya suatu rangkuman tentang para pakar programmer dan developer dari seluruh dunia yang mempunyai skill pemrograman melalui beragam bahasa, seperti Kotlin, Java, Swift, C, C++ JavaSript, Phyton, dan lain sebagainya. \n \nSemoga dengan adanya aplikasi ini dapat membantu pengguna Github di Indonesia untuk menemukan rujukan yang diinginkan.\nWhat's new in 1.0 alphaBeta 2022 version?\n1. Search user pada halaman utama.\n2. About us bisa diakses terpisah.\n3. Myprofile dapat diakses terpisah.\n\n Enjoy your new application."</string>
    <string name="copyright">Copyright &#169; 2022. \nLukmanul Hakim - A2013F1357 \nBangkit 2022\n\nVersi 1.0 AlphaBeta 2022</string>
    <string name="logo_github">Logo Github</string>
    <string name="name">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="description">Deskripsi</string>
    <string name="location">Lokasi</string>
    <string name="since">Aktif sejak</string>
    <string name="repository">Repositori</string>
    <string name="company">Perusahaan</string>
    <string name="followers">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="photo">Avatar</string>
    <string name="email">Email</string>
    <string name="about_user">Tentang User</string>
    <string name="website">Website</string>
    <string name="twitter">Akun twitter</string>
    <string name="project">Project</string>
    <string name="packageGithub">Package</string>
    <string name="starsGithub">Stars</string>
    <string name="languageGithub">Bahasa Pemrograman</string>
    <string name="achievements">Achievement</string>
    <string name="original_project">Original Project</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_country">Search by\nCountry</string>
    <string name="copyright_icon">Copyright by https://www.freeiconspng.com/images/android-icon</string>
    <string name="copyright_github">Copyright by Github</string>
    <string name="copyright_lukman">Myn own image</string>
    <string name="copyright_community">Courtsey https://www.123rf.com</string>
    <string name="description_search">Silahkan masukkan nama user Github \nyang ingin Anda cari.</string>
    <string name="description_favorite">Halaman Favorit ini masih belum ada yang didaftarkan sebagai favorit. \n\n\n Silakan kembali ke beranda halaman untuk selanjutnya mencari user Github favorit anda.</string>
    <string name="count_user">Jumlah Ditemukan</string>
    <string name="about_application">About Us</string>
    <string name="about_my_profile">My Profile</string>
    <string name="to_peduli_lindung">Cek-in Peduli Lindungi</string>
    <string name="result_user">Pencarian</string>
    <string name="back_main_activity">Kembali ke Halaman Utama</string>
    <string name="alamat_url">Alamat URL</string>
    <string name="detail_search_user">Detail User Github</string>
    <string name="detail_avatar">Profile avatar</string>
    <string name="detail_username">Profile username</string>
    <string name="detail_name">Profile nama lengkap</string>
    <string name="detail_company">Profile company</string>
    <string name="repositories_detail">Repositori</string>
    <string name="content_company">icon Company</string>
    <string name="content_location">icon Location</string>
    <string name="content_repo">icon Repository</string>
    <string name="content_follow">icon Follow</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="tab_text_3">Detail</string>
    <string name="content_tab_detail">Detail User</string>
    <string name="content_tab_followers">Followers disini</string>
    <string name="content_tab_following">Following disini</string>
    <string name="back_home">Home</string>
    <string name="my_account">jurpro</string>
    <string name="title">Judul</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Berhasil ditambahkan ke daftar Favorit Anda</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="added_to_favorite">Berhasil ditambahkan ke daftar Favorit Anda</string>
    <string name="delete_from_favorite">Berhasil dihapus dari daftar Favorit Anda</string>
    <string name="user_detail">Detail User</string>
    <string name="username_detail">Username</string>
    <string name="location_detail">Lokasi</string>
    <string name="repository_detail">Repository saat ini</string>
    <string name="project_detail">Project Saat ini</string>
    <string name="packageGithub_detail">Package Github</string>
    <string name="company_detail">Perusahaan</string>
    <string name="since_detail">Sejak</string>
    <string name="languageGithub_detail">Bahasa Pemrograman</string>
    <string name="achievements_detail">Achievement</string>
    <string name="email_detail">Email</string>
    <string name="website_detail">Website</string>
    <string name="twitte_detail">Twitter</string>
    <string name="about_user_detail">Bio</string>
    <string name="detail_user_account">Detail User Github</string>
    <string name="followers_detail">Pengikut</string>
    <string name="following_detail">Mengikuti</string>
    <string name="starsGithub_detail">Stars</string>
    <string name="share">Share</string>
    <string name="favorite">My Favorite</string>
    <string name="search">Cari</string>
    <string name="search_hint">Masukkan Nama</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="avatar">https://avatars.githubusercontent.com/u/5201127?v=4</string>
    <string name="user">Lukmanul Hakim</string>
    <string name="show_list_users">Show me list of Github users</string>
    <string name="last_update">Update</string>
    <string name="last_update_detail">Update</string>
    <string name="hireable">Menerima Pekerjaan</string>
    <string name="hireable_detail">Menerima Pekerjaan</string>
    <string name="content_tab_text">This is %1$d</string>
    <string name="about_us">Tentang Kami</string>
    <string-array name="data_name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David (javalin.io)</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
        <item>Lukmanul Hakim</item>
        <item>Alexander Udalov</item>
        <item>Natalia Selezneva</item>
        <item>Stanislav Erokhin</item>
        <item>Victor Petukhov</item>
        <item>Vladimir Dolzhenko</item>
        <item>Andrew Trick</item>
        <item>adrian-prantl</item>
        <item>Becca Royal-Gordon</item>
        <item>Adi Andrea</item>
        <item>Graydon Hoare</item>
        <item>Huon Wilson</item>
        <item>Alexander Likhachev</item>
        <item>Maxim Shafirov</item>
        <item>Ilya Ryzhenkov</item>
        <item>Vitaliy Bibaev</item>
        <item>Alexander Shabalin</item>
        <item>Mads Sig Ager</item>
        <item>asedunov</item>
        <item>Denis Zharkov</item>
    </string-array>
    <string-array name="data_about_user">
        <item>"No information available".</item>
        <item>"Co-Founder &#64;  CuriousJr, MindOrks, AfterAcademy &#124; Educator &#124; Startup Advisor &#124; Technology, Product, Growth &#124; Open Source Contributor"</item>
        <item>"Engineering director at Google on Android"</item>
        <item>"No information available"</item>
        <item>"Creator of https://javalin.io (https://github.com/tipsy/javalin)"</item>
        <item>"Founder of androidhive.info &amp; droid5.com"</item>
        <item>"Kotlin and Container Technology Enthusiast!"</item>
        <item>"The only way to do a great work is to love what you do"</item>
        <item>"I am a father and software developer. Love Coding, Software Development, Community Leader of &#64;jvmdeveloperid, &#64;KotlinID &amp;&amp; &#64;IDDevOps"</item>
        <item>"No information available"</item>
        <item>"Student"</item>
        <item>"No information available"</item>
        <item>"Hi, I'm Natalia Selezneva I work the in Kotlin team"</item>
        <item>"Hi, I'm Stanislav Erokhin I work in Kotlin team"</item>
        <item>"Software developer for Kotlin Compiler &#64; JetBrains, computer science researcher &#64; ITMO University"</item>
        <item>"Hi, I'm Vladimir Dolzhenko I work in the Kotlin team"</item>
        <item>"No information available"</item>
        <item>"No information available."</item>
        <item>"Swift compiler engineer."</item>
        <item>"Android Engineer"</item>
        <item>"No information available."</item>
        <item>"Formerly: @data61, Swift frontend @apple, core team &#64;rust-lang. he&#47;him"</item>
        <item>"( ಠ益ಠ)"</item>
        <item>"No information available."</item>
        <item>"JetBrains. Now Kotlin and IntelliJ. Previously ReSharper."</item>
        <item>"No information available."</item>
        <item>"No information available."</item>
        <item>"No information available."</item>
        <item>"No information available."</item>
        <item>"No information available."</item>
    </string-array>
</resources>