<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AboutUsFragment">

    <ImageView
        android:id="@+id/github_logo"
        android:layout_width="250dp"
        android:layout_height="106dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/copyright_github"
        android:scaleType="fitXY"
        android:src="@drawable/github_png15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/about_us_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/intro_muka"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_logo" />

    <Button
        android:id="@+id/btn_back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/back_main_activity"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_copyright"
        app:layout_constraintEnd_toEndOf="@+id/about_us_app"
        app:layout_constraintStart_toStartOf="@+id/about_us_app"
        app:layout_constraintTop_toBottomOf="@+id/about_us_app" />

    <TextView
        android:id="@+id/text_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_back_to_main"
        app:layout_constraintStart_toStartOf="@+id/btn_back_to_main"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>